--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "ext-curl": "*",
+        "ext-json": "*",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-      "ext-curl": "*",
-      "ext-json": "*"
+        "voov/billingo-api-connector": "^1.1"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
