Possible fix for slow requests

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=51f02667baae88dee63c",
+    "/css/app.css": "/css/app.css?id=8fb7970a76e6cfdc18de"
 }
