--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-    "/js/app.js": "/js/app.js?id=51f02667baae88dee63c",
-    "/css/app.css": "/css/app.css?id=8fb7970a76e6cfdc18de"
+    "/js/app.js": "/js/app.js?id=215fac46c57fa0849c1f",
+    "/css/app.css": "/css/app.css?id=22db64879879ea10ae6f",
+    "/js/app.js.map": "/js/app.js.map?id=274e86a70df474d6499a"
 }
