Adds Benji money

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=215fac46c57fa0849c1f",
-    "/css/app.css": "/css/app.css?id=22db64879879ea10ae6f",
-    "/js/app.js.map": "/js/app.js.map?id=274e86a70df474d6499a"
+    "/js/app.js": "/js/app.js?id=af5176d5648616495ad4",
+    "/css/app.css": "/css/app.css?id=8fb7970a76e6cfdc18de"
 }
