Makes all invoices go to the main admin

--- a/.gitignore
+++ b/.gitignore
@@ -239,3 +239,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/node,laravel,windows,phpstorm+all
+.phpstorm.meta.php
+_ide_helper.php
+_ide_helper_models.php
