--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,17 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SHOPRENTER_API=""
+SHOPRENTER_USER=""
+SHOPRENTER_PASSWORD=""
+
+PRIVATE_KEY=""
+MAINTENANCE_TOKEN=""
+
+AAM_VAT_ID=992
+
+BILLINGO_V3_API=""
+
+ADMIN_USER_ID=
+KLAVIYO_PUBLIC_API_KEY=""
