--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,14 @@
         "ext-curl": "*",
         "ext-json": "*",
         "barryvdh/laravel-dompdf": "^0.8.6",
+        "dubbie/billingo-v3": "*@dev",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "voov/billingo-api-connector": "^1.1",
-        "dubbie/billingo-v3": "*@dev"
+        "phpoffice/phpspreadsheet": "^1.20",
+        "voov/billingo-api-connector": "^1.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.7",
