--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,5 +2,5 @@
 ---
 deployment:
  tasks:
- - /opt/cpanel/composer/bin/composer install # Feltelepítjük a dependencyket
+ - /usr/local/bin/ea-php81 /opt/cpanel/composer/bin/composer install # Feltelepítjük a dependencyket
  - /bin/ls -la vendor
