--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     "barryvdh/laravel-ide-helper": "^2.7",
     "facade/ignition": "^2.0",
     "fzaninotto/faker": "^1.9.1",
+    "laravel/sail": "^1.23",
     "laravel/ui": "^3.0",
     "mockery/mockery": "^1.3.1",
     "nunomaduro/collision": "^4.1",
