--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,11 @@
     "laravel/framework": "^8.0",
     "laravel/tinker": "^2.0",
     "phpoffice/phpspreadsheet": "^1.20",
-    "voov/billingo-api-connector": "^1.1"
+    "voov/billingo-api-connector": "^1.1",
+    "ext-soap": "*",
+    "ext-dom": "*",
+    "ext-libxml": "*",
+    "ext-simplexml": "*"
   },
   "require-dev": {
     "barryvdh/laravel-ide-helper": "^2.7",
